--- a/org.eclipse.jdt.ls.core/pom.xml
+++ b/org.eclipse.jdt.ls.core/pom.xml
@@ -59,7 +59,7 @@
 
 
 								def checksumsFile = new File(project.basedir.absolutePath, "gradle/checksums/checksums.json")
-								if (System.getProperty("eclipse.jdt.ls.skipGradleChecksums") != null &amp;&amp; checksumsFile.exists()) {
+								if (System.getProperty("eclipse.jdt.ls.skipGradleChecksums") != null) {
 									println "Skipping gradle wrapper validation checksums ..."
 									return
 								}
