--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,16 @@
 		</plugins>
 	</build>
 	<repositories>
+        <repository>
+            <id>public</id>
+            <name>阿里云公共仓库</name>
+            <url>https://maven.aliyun.com/repository/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
+	<!-- <repositories>
 		<repository>
 			<id>oss.sonatype.org</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
@@ -228,7 +238,7 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
-	</repositories>
+	</repositories> -->
 	<profiles>
 		<profile>
 			<id>plugin</id>
@@ -345,11 +355,24 @@
 		</profile>
 	</profiles>
 	<pluginRepositories>
+        <pluginRepository>
+            <id>public</id>
+            <name>阿里云公共仓库</name>
+            <url>https://maven.aliyun.com/repository/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+	<!-- <pluginRepositories>
 		<pluginRepository>
 			<id>cbi-release</id>
 			<url>https://repo.eclipse.org/content/repositories/cbi-releases/</url>
 		</pluginRepository>
-	</pluginRepositories>
+	</pluginRepositories> -->
 	<distributionManagement>
 		<repository>
 			<id>repo.eclipse.org</id>
